--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 body {
   background-color: #800080;
 }
+input:valid {
+  background-color: transparent; /* atau warna awal yang kamu inginkan */
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
